# hed-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  PKG_README.md  README.md  SECURITY.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  environment.yml  plan.md  pyproject.toml
.context/: agent-architecture.md  api-and-deployment.md  hed-annotation-rules.md  hed-lsp-integration.md  hed-schemas.md  hed-validation.md  image-differential-research.md  osa-comparison-analysis.md
.github/: dependabot.yml
.github/workflows/: auto-release.yml  docker-build.yml  process-feedback.yml  publish-testpypi.yml  publish.yml  release.yml  security-scan.yml  test.yml
.hedit/telemetry/: input_hashes.json
.rules/: git.md  python.md  testing.md
.serena/: project.yml
.serena/cache/python/: document_symbols.pkl  raw_document_symbols.pkl
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
bug_reports/: .gitkeep
bug_reports/processed/: .gitkeep
deploy/: DEPLOYMENT_ARCHITECTURE.md  Dockerfile  README.md  SECURITY.md  apache-hedtools.conf  auto-update-dev.sh  auto-update.sh  deploy.sh  nginx-hedtools.conf
docs/: DEPLOYMENT.md  DEV_WORKFLOW.md  PROJECT_SUMMARY.md  README.md  SCHEMA_HANDLING.md  USAGE.md  manual-test-byok-model-selection.md  manual-test-testpypi.md
docs/deployment/: README.md  docker-architecture.md  docker-updates.md  openrouter.md
docs/development/: cloudflare-migration-analysis.md  contributing.md  project-summary.md  versioning.md
docs/guides/: frontend.md  schema-handling.md  usage.md
examples/: BENCHMARK.md  README.md  image_benchmark.py  model_benchmark.py  test_examples.py  test_quality_comparison.py  test_ultrafast_cerebras.py  test_vision_integration.py
examples/benchmark_results/: 20251222_214525_claude-haiku-4.5_animal.json  20251222_214525_claude-haiku-4.5_cognitive.json  20251222_214525_claude-haiku-4.5_paradigm.json  20251222_214525_gemini-3-flash_animal.json  20251222_214525_gemini-3-flash_cognitive.json  20251222_214525_gemini-3-flash_paradigm.json  20251222_214525_gpt-4o-mini_animal.json  20251222_214525_gpt-4o-mini_cognitive.json  20251222_214525_gpt-4o-mini_paradigm.json  20251222_214525_gpt-5.1-codex-mini_animal.json  20251222_214525_gpt-5.1-codex-mini_cognitive.json  20251222_214525_gpt-5.1-codex-mini_paradigm.json  20251222_214525_gpt-5.2_animal.json  20251222_214525_gpt-5.2_cognitive.json  20251222_214525_gpt-5.2_paradigm.json  20251222_214525_gpt-oss-120b_animal.json  20251222_214525_gpt-oss-120b_cognitive.json  20251222_214525_gpt-oss-120b_paradigm.json  20251222_214525_mistral-small-3.2-24b_animal.json  20251222_214525_mistral-small-3.2-24b_cognitive.json  20251222_214525_mistral-small-3.2-24b_paradigm.json  20251222_214525_summary.md  20251222_230459_image_shared0001_nsd02951.json  20251222_230459_image_shared0027_nsd04157.json  20251222_230459_image_shared0034_nsd04691.json  20251222_230459_image_shared0060_nsd06432.json  20251222_230459_image_shared0092_nsd08319.json  20251222_230459_image_shared0107_nsd09148.json  20251222_230459_image_shared0117_nsd09979.json  20251222_230459_image_shared0145_nsd11943.json  20251222_230459_image_shared0231_nsd19200.json  20251222_230459_image_shared0253_nsd20821.json  20251222_230459_image_shared0284_nsd22810.json  20251222_230459_image_shared0435_nsd32308.json  20251222_230459_image_shared0561_nsd42225.json  20251222_230459_image_shared0607_nsd44721.json  20251222_230459_image_shared0657_nsd47688.json  20251222_230459_image_shared0695_nsd50812.json  20251222_230459_image_shared0757_nsd55108.json  20251222_230459_image_shared0761_nsd55527.json  (+3 more)
examples/images/: README.md
feedback/: .gitkeep
feedback/processed/: .gitkeep
feedback/unprocessed/: .gitkeep
frontend/: config.js  index.html
scripts/: bump_version.py  dev.sh  generate_api_key.py  generate_embeddings.py  run_coverage.sh  test_api.py  test_error_remediation.py  test_testpypi_package.sh
src/: version.py
src/agents/: annotation_agent.py  assessment_agent.py  evaluation_agent.py  feedback_summarizer.py  feedback_triage_agent.py  keyword_extraction_agent.py  state.py  validation_agent.py  vision_agent.py  workflow.py
src/api/: main.py  models.py  security.py
src/cli/: api_executor.py  client.py  config.py  executor.py  local_executor.py  main.py  output.py
src/scripts/: __init__.py  process_feedback.py
src/telemetry/: __init__.py  collector.py  schema.py  storage.py
src/utils/: error_remediation.py  github_client.py  hed_comprehensive_guide.py  hed_rules.py  image_processing.py  json_schema_loader.py  openrouter_llm.py  schema_loader.py  semantic_search.py
src/validation/: __init__.py  hed_lsp.py  hed_validator.py  hedtools_validator.py  validation_types.py
tests/: __init__.py  test_annotation_agent.py  test_api_endpoints.py  test_cli_config.py  test_cli_integration.py  test_cli_main.py  test_comprehensive_guide.py  test_error_remediation.py  test_feedback_integration.py  test_feedback_triage.py  test_github_client.py  test_hed_lsp.py  test_hedtools_validator.py  test_integration_openrouter.py  test_openrouter_llm.py  test_schema_loader.py  test_security.py  test_semantic_search.py  test_standalone_semantic.py  test_state.py  test_telemetry.py  test_validation.py  test_validation_agent.py
workers/: .gitignore  PROXY_SETUP.md  index.js  package-lock.json  package.json  wrangler.dev.toml  wrangler.toml
